<?xml version="1.0"?>
<package>
  <name>yolo_depth_fusion</name>
  <version>1.1.2</version>
  <description>Node to repackage data from /darknet_ros/bounding_boxes topic, and fuse it with depth map data.</description>
  <maintainer email="mon15008@student.mdh.se">Magnus Östgren</maintainer>
  <license>fuck</license>
  <buildtool_depend>catkin</buildtool_depend>




  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>





  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>





  
</package>
